--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -12,9 +12,12 @@
   }
   .header {
     @apply 
-    text-3xl font-medium
     m-0 
     fixed top-0 left-0 right-0;
+  }
+  .logo {
+    @apply 
+    text-3xl font-medium;
   }
   .footer {
     @apply 
@@ -45,12 +48,19 @@
     @apply 
     text-amber-400;
   }
-  .btn {
+  .btn-white {
     @apply
-    bg-blue-500
+    border-solid border-2 border-white
     text-white font-bold
     py-2 px-4 rounded
-    hover:bg-blue-700;
+    hover:bg-amber-400;
+  }
+  .btn-black {
+    @apply
+    border-solid border-2 border-black
+    text-black font-bold
+    py-2 px-4 rounded
+    hover:bg-amber-400;
   }
 }
 
