--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -28,6 +28,25 @@
 }
 
 @layer utilities {
+  .form-div {
+    @apply
+    flex justify-center items-center h-screen;
+  }
+  .form {
+    @apply
+    bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4;
+  }
+  .form-input {
+    @apply
+    shadow appearance-none border rounded w-full py-2 px-3 text-gray-700;
+  }
+  .form-label {
+    @apply
+    block text-gray-700 text-sm font-bold mb-2;
+  }
+}
+
+@layer utilities {
   .nav-links {
     @apply
     flex;
